Added Spanish Localization (Will Finish Soon)

--- a/es-es.yml
+++ b/es-es.yml
@@ -1,1 +1,153 @@
-zdzasddasdfs
+Permission: 'Usted no tiene los permisos necesarios.'
+Ban:
+  Arguments: '&f/ban {player} (-s/-a) (reason) &4Los argumentos no suficientes'
+  Failed: '&4%victim%&c ya está prohibido.'
+  Denied: '&4Su intento de prohibición ha sido negada!'
+  Emo: '&4No se puede prohibir a ti mismo!'
+  MsgToVictim: '&6Usted ha sido prohibido por &7%admin%&6. razón: &7%reason%&6!'
+  MsgToBroadcast: '&7%victim%&6 fue prohibido por &7%admin%&6. razón: &7%reason%&6!'
+  Login: '&7%admin%&6 prohibido de este servidor! razón: &7%reason%&6!'
+CheckBan:
+  Arguments: '&f/checkban {player} &4Los argumentos no suficientes'
+  Header: '&6fundar &7%amt%&6registros para &7%victim%&6.'
+  None: '&cNo se encontraron registros &4%victim%&c.'
+CheckIP:
+  Arguments: '&f/checkip {player} &4Los argumentos no suficientes'
+  NoPlayer: '&7Jugador no encontrado!'
+  MSG1: '&eHost Address: '
+  MSG2: '&eHost Name: '
+  Exception: '&4Recopilación de información Error!'
+Clean:
+  Complete: '&6Suprimido &7%amt%&6 archivos player.dat.'
+DupeIP:
+  Arguments: '&f/dupeip {player} &4Los argumentos no suficientes'
+  NoPlayer: '&7Jugador no encontrado!'
+  Header: '&6Escaneado de IP actual de &7%victim%&6: &7%ip% !'
+  Completed: '&aEscaneo completo!'
+Export:
+  Failed: '&4No se pudo exportar listas de prohibición.'
+  Completed: '&aBanlists exportado.'
+History:
+  Failed: '&4No se puede encontrar toda la información'
+  Header: '&6Ultrabans Ficha &7%amt% &6Registros.'
+Import:
+  Loading: '&aSer paciente. Cargando...'
+  Failed: '&4No se pudo importar listas de prohibición.'
+  Completed: '&aSistema importó la lista de ban a la base de datos.'
+InvOf:
+  Arguments: '&f/invof {player} &4Los argumentos no suficientes'
+  Console: '&4Este comando debe ser ejecutado por un jugador.'
+  Failed: '&4Incapaz de encontrar jugador.'
+IPBan:
+  Arguments: '&f/ipban {player} (-s/-a) (reason) &4Los argumentos no suficientes'
+  Failed: '&4%victim%&c ya está ipbanned.'
+  Denied: '&4Su intento ipban ha sido negado!'
+  Emo: '&4No se puede ipban ti mismo!'
+  IPNotFound: '&4Dirección IP no se encuentra. &6Procesado como la prohibición normal &7%victim%&6!'
+  MsgToVictim: '&6Usted ha sido ipbanned por &7%admin%&6. razón: &7%reason%&6!'
+  MsgToBroadcast: '&7%victim%&6 fue ipbanned por &7%admin%&6. razón: &7%reason%&6!'
+  Login: '&7%admin%&6 usted ipbanned desde este servidor! razón: &7%reason%&6!'
+Jail:
+  Arguments: '&f/jail {setjail/setrelease/player} (reason) &4Los argumentos no suficientes'
+  SetFail: '&4No se puede establecer la posición.'
+  SetJail: '&6Establecer Cárcel Posición.'
+  SetRelease: '&6Establecer posición de lanzamiento'
+  MsgToVictim: '&6Usted ha sido encarcelado por &7%admin%&6. razón: &7%reason%&6!'
+  MsgToBroadcast: '&7%victim%&6 fue encarcelado por &7%admin%&6. razón: &7%reason%&6!'
+  Failed: '&4%victim%&c ya está en la cárcel.'
+  Online: '&4%victim%&c debe estar en línea para ser encarcelado.'
+  Denied: '&cSu intento de la cárcel ha sido negado!'
+  Emo: '&cUsted puede usted mismo no la cárcel!'
+  PlaceMsg: '&cNo se puede colocar bloques mientras está encarcelado!'
+  BreakMsg: '&cNo se puede romper bloques mientras está encarcelado!'
+Kick:
+  Arguments: '&f/kick {player/*/"all"} (-s/-a) (reason) &4Los argumentos no suficientes'
+  MsgToAll: '&6Todo el mundo ha sido golpeada por &7%admin%&6. razón: &7%reason%&6!'
+  MsgToVictim: '&6Usted ha sido pateado por &7%admin%&6. razón: &7%reason%&6!'
+  MsgToBroadcast: '&7%victim%&6 fue pateado por &7%admin%&6. razón: &7%reason%&6!'
+  Online: '&4El jugador debe estar en línea.'
+  Denied: '&cSu tiro ha sido negado!'
+  Emo: '&cNo se puede poner a ti mismo!'
+Lockdown:
+  Arguments: '&f/lockdown {on/off/status} &4Los argumentos no suficientes'
+  Start: '&cLockdown inició. &4Player Inicio de sesión &c deshabilitado.'
+  End: '&aLockdown terminó. &2Player Inicio de sesión &a vuelve a habilitar.'
+  Status: '&cLockdown está desactivado.'
+  LoginMsg: '&4Servidor está bajo un bloqueo, Inténtalo de nuevo más tarde!&c triste.'
+Mute:
+  Arguments: '&f/umute {player} (reason) &4Los argumentos no suficientes'
+  MuteMsgToSender: '&6You have muted &7%victim%&6.'
+  MuteMsgToVictim: '&4You have been muted!'
+  UnmuteMsgToSender: '&6You have unmuted &7%victim%&6.'
+  UnmuteMsgToVictim: '&aYou have been unmuted.'
+  Denied: '&cYour mute has been denied!'
+  Emo: '&cYou cannot mute yourself!'
+  Chat: '&cYour cry falls on deaf ears.'
+Pardon:
+  Arguments: '&f/pardon {player} &4Not Enough Arguments'
+  Msg: '&7%victim%&6 was released from jail by &7%admin%&6!'
+  Failed: '&4Player must be online.'
+PermaBan:
+  Arguments: '&f/permaban {player} (-s/-a) (reason) &4Not Enough Arguments'
+  MsgToVictim: '&6You have been permabanned by &7%admin%&6. Reason: &7%reason%&6!'
+  MsgToBroadcast: '&7%victim%&6 was permabanned by &7%admin%&6. Reason: &7%reason%&6!'
+  Failed: '&4%victim%&c is already banned.'
+  Online: '&4%victim%&c must be online.'
+  Denied: '&cYour permaban has been denied!'
+  Emo: '&cYou cannot permaban yourself!'
+Ping:
+  Failed: '&7Unable to retrieve ping.'
+  Personal: '&6Your ping is &7%amt%ms.'
+  Other: '&7%victim%&6 ping is &7%amt%ms.'
+Reload: '&aReloaded Ultrabans.'
+Spawn:
+  Arguments: '&f/spawn {player} &4Not Enough Arguments'
+  MsgToVictim: '&cYou have been sent to spawn!'
+  MsgToSender: '&7%victim%&6 is now at spawn!'
+  Failed: '&4%victim%&c is not online.'
+Starve:
+  Arguments: '&f/spawn {player} &4Not Enough Arguments'
+  MsgToVictim: '&cYou are now starving!'
+  MsgToSender: '&6%victim%&7 is now starving!'
+  Failed: '&4%victim%&c is not online.'
+Status:
+  Usage: '&6Estimated Usage: &7%amt% bytes.'
+  CacheHeader: '&7--- [&6Currently Loaded&7] ---'
+  CacheBans: '&6All Cached Players: &7%amt%'
+  CacheIPBans: '&6All IPs Banned: &7%amt%'
+Tempban:
+  Arguments: '&f/tempban {player} (-s/-a) {amt} {sec/min/hour/day} {Reason} &4Not Enough Arguments'
+  MsgToVictim: '&6You have been tempbanned by &7%admin%&6 for &7%amt% %mode%s.&6 Reason: &7%reason%&6!'
+  MsgToBroadcast: '&7%victim%&6 was tempbanned by &7%admin%&6 for &7%amt% %mode%s.&6 Reason: &7%reason%&6!'
+  Failed: '&4%victim%&c is already tempbanned!'
+  Denied: '&cYour tempban has been denied!'
+  Emo: '&cYou cannot tempban yourself!'
+  Login: '&6You have been tempbanned by &7%admin%&6 for &7%time%&6. Reason: &7%reason%&6!'
+TempIpBan:
+  Arguments: '&f/tempipban {player} (-s/-a) {amt} {sec/min/hour/day} {Reason} &4Not Enough Arguments'
+  MsgToVictim: '&6You have been tempipbanned by &7%admin%&6 for &7%amt% %mode%s.&6 Reason: &7%reason%&6!'
+  MsgToBroadcast: '&7%victim%&6 was tempipbanned by &7%admin%&6 for &7%amt% %mode%s.&6 Reason: &7%reason%&6!'
+  Failed: '&4%victim%&c is already tempipbanned!'
+  Denied: '&cYour tempipban has been denied!'
+  Emo: '&cYou cannot tempipban yourself!'
+  IPNotFound: '&cIP address not found.&6 Processed as a normal tempban for &7%victim%&6!'
+TempJail:
+  Arguments: '&f/tempjail {player} (-s/-a) {amt} {sec/min/hour/day} {Reason} &4Not Enough Arguments'
+  MsgToVictim: '&6You have been tempjailed by &7%admin%&6 for &7%amt% %mode%s.&6 Reason: &7%reason%&6!'
+  MsgToBroadcast: '&7%victim%&6 was tempjailed by &7%admin%&6 for &7%amt% %mode%s.&6 Reason: &7%reason%&6!'
+  Failed: '&4%victim%&c is already jailed!'
+  Denied: '&cYour tempjail has been denied!'
+  Emo: '&cYou cannot tempjail yourself!'
+Unban:
+  Arguments: '&f/unban {player} &4Not Enough Arguments'
+  MsgToBroadcast: '&7%victim%&6 was unbanned by &7%admin%&6!'
+  PermaBanned: '&cUnable to unban, &7%victim%&c was Permabanned.'
+  Failed: '&4%victim%&c is already unbanned!'
+Warn:
+  Arguments: '&f/warn {player} (-s/-a) (reason) &4Not Enough Arguments'
+  MsgToVictim: '&6You have been warned by &7%admin%&6. Reason: &7%reason%&6!'
+  MsgToBroadcast: '&7%victim%&6 was warned by &7%admin%&6. Reason: &7%reason%&6!'
+  Denied: '&cYour warning has been denied!'
+  Emo: '&cYou cannot warn yourself!'
+MaxWarn:
+  MsgToBroadcast: '&7%cmd%&6 performed by Ultrabans on &7%victim%&6. Reason: &7Reached Max Warnings&6!'
