--- a/es-es.yml
+++ b/es-es.yml
@@ -76,59 +76,58 @@ Lockdown:
   LoginMsg: '&4Servidor está bajo un bloqueo, Inténtalo de nuevo más tarde!&c triste.'
 Mute:
   Arguments: '&f/umute {player} (reason) &4Los argumentos no suficientes'
-  MuteMsgToSender: '&6You have muted &7%victim%&6.'
-  MuteMsgToVictim: '&4You have been muted!'
-  UnmuteMsgToSender: '&6You have unmuted &7%victim%&6.'
-  UnmuteMsgToVictim: '&aYou have been unmuted.'
-  Denied: '&cYour mute has been denied!'
-  Emo: '&cYou cannot mute yourself!'
-  Chat: '&cYour cry falls on deaf ears.'
+  MuteMsgToSender: '&6Usted ha silenciado &7%victim%&6.'
+  MuteMsgToVictim: '&4Usted ha sido silenciado!'
+  UnmuteMsgToSender: '&6Has desactivar el silencio &7%victim%&6.'
+  UnmuteMsgToVictim: '&aUsted ha sido silenciado.'
+  Denied: '&cSu silencio ha sido negado!'
+  Emo: '&cNo se puede silenciar a ti mismo!'
+  Chat: '&cSu grito cae en oídos sordos.'
 Pardon:
-  Arguments: '&f/pardon {player} &4Not Enough Arguments'
-  Msg: '&7%victim%&6 was released from jail by &7%admin%&6!'
-  Failed: '&4Player must be online.'
+  Arguments: '&f/pardon {player} &4Los argumentos no suficientes'
+  Msg: '&7%victim%&6 fue liberado de la cárcel por 7%admin%&6!'
+  Failed: '&4El jugador debe estar en línea.'
 PermaBan:
-  Arguments: '&f/permaban {player} (-s/-a) (reason) &4Not Enough Arguments'
-  MsgToVictim: '&6You have been permabanned by &7%admin%&6. Reason: &7%reason%&6!'
-  MsgToBroadcast: '&7%victim%&6 was permabanned by &7%admin%&6. Reason: &7%reason%&6!'
-  Failed: '&4%victim%&c is already banned.'
-  Online: '&4%victim%&c must be online.'
-  Denied: '&cYour permaban has been denied!'
-  Emo: '&cYou cannot permaban yourself!'
+  Arguments: '&f/permaban {player} (-s/-a) (reason) &4Los argumentos no suficientes'
+  MsgToVictim: '&6Usted ha sido permabanned por &7%admin%&6. razón: &7%reason%&6!'
+  MsgToBroadcast: '&7%victim%&6 was permabanned by &7%admin%&6. razón: &7%reason%&6!'
+  Failed: '&4%victim%&c ya está prohibido.'
+  Online: '&4%victim%&c debe estar en línea.'
+  Denied: '&cSus Permaban ha sido negado!'
+  Emo: '&cNo se puede Permaban ti mismo!'
 Ping:
-  Failed: '&7Unable to retrieve ping.'
-  Personal: '&6Your ping is &7%amt%ms.'
-  Other: '&7%victim%&6 ping is &7%amt%ms.'
+  Failed: '&7No se puede recuperar ping.'
+  Personal: '&6Tu ping es &7%amt%ms.'
+  Other: '&7%victim%&6 ping es &7%amt%ms.'
 Reload: '&aReloaded Ultrabans.'
 Spawn:
-  Arguments: '&f/spawn {player} &4Not Enough Arguments'
-  MsgToVictim: '&cYou have been sent to spawn!'
-  MsgToSender: '&7%victim%&6 is now at spawn!'
-  Failed: '&4%victim%&c is not online.'
+  Arguments: '&f/spawn {player} &4Los argumentos no suficientes'
+  MsgToVictim: '&cTe han enviado para desovar!'
+  MsgToSender: '&7%victim%&6 ahora está en desove!'
+  Failed: '&4%victim%&c no está en línea.'
 Starve:
-  Arguments: '&f/spawn {player} &4Not Enough Arguments'
-  MsgToVictim: '&cYou are now starving!'
-  MsgToSender: '&6%victim%&7 is now starving!'
-  Failed: '&4%victim%&c is not online.'
+  Arguments: '&f/spawn {player} &4Los argumentos no suficientes'
+  MsgToVictim: '&cAhora está muriendo de hambre!'
+  MsgToSender: '&6%victim%&7 ahora está muriendo de hambre!'
 Status:
-  Usage: '&6Estimated Usage: &7%amt% bytes.'
-  CacheHeader: '&7--- [&6Currently Loaded&7] ---'
-  CacheBans: '&6All Cached Players: &7%amt%'
-  CacheIPBans: '&6All IPs Banned: &7%amt%'
+  Usage: '&6Uso estimado: &7%amt% bytes.'
+  CacheHeader: '&7--- [&6actualmente Loaded&7] ---'
+  CacheBans: '&6Todos los jugadores en caché: &7%amt%'
+  CacheIPBans: '&6Todas las IPs prohibidas: &7%amt%'
 Tempban:
-  Arguments: '&f/tempban {player} (-s/-a) {amt} {sec/min/hour/day} {Reason} &4Not Enough Arguments'
-  MsgToVictim: '&6You have been tempbanned by &7%admin%&6 for &7%amt% %mode%s.&6 Reason: &7%reason%&6!'
-  MsgToBroadcast: '&7%victim%&6 was tempbanned by &7%admin%&6 for &7%amt% %mode%s.&6 Reason: &7%reason%&6!'
-  Failed: '&4%victim%&c is already tempbanned!'
-  Denied: '&cYour tempban has been denied!'
-  Emo: '&cYou cannot tempban yourself!'
-  Login: '&6You have been tempbanned by &7%admin%&6 for &7%time%&6. Reason: &7%reason%&6!'
+  Arguments: '&f/tempban {player} (-s/-a) {amt} {sec/min/hour/day} {Reason} &4Los argumentos no suficientes'
+  MsgToVictim: '&6Usted ha sido tempbanned por &7%admin%&6 para &7%amt% %mode%s.&6 razón: &7%reason%&6!'
+  MsgToBroadcast: '&7%victim%&6 fue tempbanned por &7%admin%&6 para &7%amt% %mode%s.&6 razón: &7%reason%&6!'
+  Failed: '&4%victim%&c ya está tempbanned!'
+  Denied: '&cSu tempban ha sido negado!'
+  Emo: '&cNo se puede tempban ti mismo!'
+  Login: '&6Usted ha sido tempbanned por &7%admin%&6 para &7%time%&6. razón: &7%reason%&6!'
 TempIpBan:
-  Arguments: '&f/tempipban {player} (-s/-a) {amt} {sec/min/hour/day} {Reason} &4Not Enough Arguments'
-  MsgToVictim: '&6You have been tempipbanned by &7%admin%&6 for &7%amt% %mode%s.&6 Reason: &7%reason%&6!'
-  MsgToBroadcast: '&7%victim%&6 was tempipbanned by &7%admin%&6 for &7%amt% %mode%s.&6 Reason: &7%reason%&6!'
-  Failed: '&4%victim%&c is already tempipbanned!'
-  Denied: '&cYour tempipban has been denied!'
+  Arguments: '&f/tempipban {player} (-s/-a) {amt} {sec/min/hour/day} {Reason} &4Los argumentos no suficientes'
+  MsgToVictim: '&6Usted ha sido tempipbanned por &7%admin%&6 para &7%amt% %mode%s.&6 razón: &7%reason%&6!'
+  MsgToBroadcast: '&7%victim%&6 fue tempipbanned por &7%admin%&6 para &7%amt% %mode%s.&6 razón: &7%reason%&6!'
+  Failed: '&4%victim%&c ya está tempipbanned!'
+  Denied: '&cSu tempipban ha sido negado!'
   Emo: '&cYou cannot tempipban yourself!'
   IPNotFound: '&cIP address not found.&6 Processed as a normal tempban for &7%victim%&6!'
 TempJail:
