--- a/es-es.yml
+++ b/es-es.yml
@@ -128,25 +128,25 @@ TempIpBan:
   MsgToBroadcast: '&7%victim%&6 fue tempipbanned por &7%admin%&6 para &7%amt% %mode%s.&6 razón: &7%reason%&6!'
   Failed: '&4%victim%&c ya está tempipbanned!'
   Denied: '&cSu tempipban ha sido negado!'
-  Emo: '&cYou cannot tempipban yourself!'
-  IPNotFound: '&cIP address not found.&6 Processed as a normal tempban for &7%victim%&6!'
+  Emo: '&cNo se puede tempipban ti mismo!'
+  IPNotFound: '&cDirección IP no encontrado.&6 Procesado como tempban normal &7%victim%&6!'
 TempJail:
-  Arguments: '&f/tempjail {player} (-s/-a) {amt} {sec/min/hour/day} {Reason} &4Not Enough Arguments'
-  MsgToVictim: '&6You have been tempjailed by &7%admin%&6 for &7%amt% %mode%s.&6 Reason: &7%reason%&6!'
-  MsgToBroadcast: '&7%victim%&6 was tempjailed by &7%admin%&6 for &7%amt% %mode%s.&6 Reason: &7%reason%&6!'
-  Failed: '&4%victim%&c is already jailed!'
-  Denied: '&cYour tempjail has been denied!'
-  Emo: '&cYou cannot tempjail yourself!'
+  Arguments: '&f/tempjail {player} (-s/-a) {amt} {sec/min/hour/day} {Reason} &4Los argumentos no suficientes'
+  MsgToVictim: '&6Usted ha sido tempjailed por &7%admin%&6 para &7%amt% %mode%s.&6 razón: &7%reason%&6!'
+  MsgToBroadcast: '&7%victim%&6 was tempjailed by &7%admin%&6 para &7%amt% %mode%s.&6 razón: &7%reason%&6!'
+  Failed: '&4%victim%&c ya está encarcelado!'
+  Denied: '&cSu tempjail ha sido negado!'
+  Emo: '&cNo se puede tempjail ti mismo!'
 Unban:
-  Arguments: '&f/unban {player} &4Not Enough Arguments'
-  MsgToBroadcast: '&7%victim%&6 was unbanned by &7%admin%&6!'
-  PermaBanned: '&cUnable to unban, &7%victim%&c was Permabanned.'
-  Failed: '&4%victim%&c is already unbanned!'
+  Arguments: '&f/unban {player} &4Los argumentos no suficientes'
+  MsgToBroadcast: '&7%victim%&6 fue readmitido por &7%admin%&6!'
+  PermaBanned: '&cNo se ha podido eliminar la prohibición, &7%victim%&c era Permabanned.'
+  Failed: '&4%victim%&c ya está unbanned!'
 Warn:
-  Arguments: '&f/warn {player} (-s/-a) (reason) &4Not Enough Arguments'
-  MsgToVictim: '&6You have been warned by &7%admin%&6. Reason: &7%reason%&6!'
-  MsgToBroadcast: '&7%victim%&6 was warned by &7%admin%&6. Reason: &7%reason%&6!'
-  Denied: '&cYour warning has been denied!'
-  Emo: '&cYou cannot warn yourself!'
+  Arguments: '&f/warn {player} (-s/-a) (reason) &4Los argumentos no suficientes'
+  MsgToVictim: '&6Usted ha sido advertido por &7%admin%&6. razón: &7%reason%&6!'
+  MsgToBroadcast: '&7%victim%&6 fue advertido por &7%admin%&6. razón: &7%reason%&6!'
+  Denied: '&cSu advertencia ha sido negado!'
+  Emo: '&cNo se puede advertir a ti mismo!'
 MaxWarn:
-  MsgToBroadcast: '&7%cmd%&6 performed by Ultrabans on &7%victim%&6. Reason: &7Reached Max Warnings&6!'
+  MsgToBroadcast: '&7%cmd%&6 realizado por Ultrabans en &7%victim%&6. razón: &7Alcanzado Advertencias Max&6!'
